--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,103 +1,105 @@
 header {
-  background-color: black;
-  color: white;
   width: 100%;
-  height: auto;
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
 }
-header .navigation {
+
+.first-nav {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-header .navigation .logo {
-  list-style: none;
-  padding: 2rem;
-  margin-left: 1.5rem;
-  background-color: rgb(13, 94, 165);
-  border-radius: 50%;
-}
-header .navigation .menu {
-  list-style: none;
-  display: flex;
   padding: 1rem;
+  background-color: rgb(0, 0, 0, 0.3);
 }
-header .navigation .menu li {
+.social {
   display: flex;
-  font-weight: 500;
+  justify-content: center;
+
+  flex: 1;
+}
+.social div {
+  margin-left: 0.75rem;
+}
+.search-bar {
+  flex: 4;
+  text-align: center;
+}
+
+.search-bar div input {
+  padding: 1rem;
+  font-size: 16px;
+  border: none;
+  outline: none;
+  border-radius: 20px;
+  width: 300px;
+}
+
+.search-icon {
+  background-color: white;
+  margin-left: -1.6rem;
+}
+
+.shop {
+  flex: 1;
+  text-align: center;
+}
+
+nav {
+  width: 100%;
+  background-color: rgb(194, 194, 194, 0.3);
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  padding: 2% 5%;
+}
+nav .logo {
+  cursor: pointer;
+}
+nav .logo img {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  background-color: rgb(31, 13, 1);
+}
+
+nav .menu ul {
+  display: flex;
+}
+nav .menu ul a {
+  display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1rem;
-  width: 4rem;
+  padding: 5px;
+  transition: all 0.5s ease-in-out;
+}
+nav .menu ul a::after {
+  content: "";
+  background-color: lightblue;
+  height: 2.5px;
+  width: 0;
+  display: block;
   transition: all 0.3s ease-in-out;
 }
-header .navigation .menu li:hover {
-  background-color: rgb(31, 31, 31);
-}
-header .navigation .menu li:active {
-  background-color: rgb(50, 50, 50);
-}
-header .navigation .menu li::after {
-  content: "";
-  width: 0px;
-  height: 3px;
-  background-color: #e25822;
-  display: block;
-  transition: width 0.3s ease-in-out;
-  margin-bottom: 2.5px;
-}
-header .navigation .menu li:hover::after {
+nav .menu ul a:hover::after {
   width: 100%;
 }
 
-header .navigation .menu a {
-  color: white;
-  text-decoration: none;
+nav .menu ul a:hover {
+  transform: translateY(-5px);
 }
-
-/*SIDEBAR MENU */
-.navigation-toggler {
-  display: none;
+nav .menu ul a:active {
+  background-color: rgba(205, 205, 205, 0.15);
 }
-.navigation-toggler button {
-  background-color: black;
-  color: white;
-  border: none;
-  transition: all 0.5s ease-in-out;
+nav .menu ul li {
+  list-style: none;
+  padding: 0px 10px 0px 10px;
+  font-size: 18px;
+  font-weight: 500;
   cursor: pointer;
 }
-.navigation-toggler button:active {
-  transform: rotateX(360deg);
-}
-
-@media screen and (max-width: 768px) {
-  .navigation-toggler {
-    display: block;
-    text-align: center;
-    margin-right: 1rem;
-    width: 10rem;
-  }
-  header .navigation {
-    position: relative;
-  }
-  .menu {
-    position: fixed;
-    top: 12vh;
-    right: 0;
-    height: 88vh;
-    background-color: black;
-    flex-direction: column;
-    align-items: center;
-    transition: all 0.5s ease-in;
-    transform: translateX(100%);
-    width: 10rem;
-    z-index: 999;
-  }
-}
-
-/*Navigation active class*/
-.nav-active {
-  transform: translateX(0);
-}
-
 /*Hamburger button animation*/
