--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,6 +1,6 @@
 header {
   width: 100%;
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
   z-index: 100;
@@ -47,6 +47,9 @@ header {
   text-align: center;
 }
 
+.second-nav {
+  padding: 15px 25px;
+}
 nav {
   width: 100%;
   background-color: rgb(194, 194, 194, 0.3);
